# FlightRosterSystem

./: .gitignore  README.md  requirements.txt
.github/workflows/: cabin_crew_tests.yml
backend/: .dockerignore  .env  .env.example  Dockerfile  database_schema.sql  enhanced_mock_data.sql  main.py  migration_add_crew_columns.sql  mock_flight_data.sql  mock_users.sql  pyproject.toml  pytest.ini  roster.py  run_tests.sh
backend/.github/workflows/: cabin_crew_tests.yml
backend/api/routes/: __init__.py  auth.py  cabin_crew.py  flight_crew.py  flights.py  passengers.py  roster.py
backend/core/: auth.py  database.py  models.py  mongodb.py  redis.py  roster_utils.py  schemas.py  user_models.py
backend/models/: models.py
backend/services/: cabin_crew.py  flight_crew.py  flight_info.py  passenger.py
backend/tests/: __init__.py  conftest.py  test_acceptance.py  test_api_integration.py  test_auth.py  test_cabin_crew_api.py  test_database.py  test_equivalence_bva.py  test_flight_crew_api.py  test_flights_api.py  test_load_stress.py  test_main.py  test_mongodb.py  test_passengers_api.py  test_performance.py  test_redis.py  test_roster_api.py  test_roster_utils.py  test_security.py  test_selenium_ui.py  test_single_company_validation.py
frontend/: .gitignore  bun.lockb  jest.config.js  jest.setup.js  package-lock.json  package.json
frontend/__tests__/: test_ApiClient.test.ts  test_Auth.test.ts  test_AuthContext.test.tsx  test_AuthContextLib.test.tsx  test_AuthPage.test.tsx  test_CrewSelector.test.tsx  test_Dashboard.test.tsx  test_DashboardHeader.test.tsx  (+10 more)
(+26 files in other folders)
