[project]
name = "cabin-crew-api"
version = "0.1.0"
description = "Flight Roster Management API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.120.4",
    "uvicorn>=0.38.0",
    "dotenv>=1.0.0",
    "sqlalchemy>=2.0.20",
    "databases[sqlite]>=0.6.3",
    "pydantic>=2.5.2",
]
