[project]
name = "cabin-crew-api"
version = "0.1.0"
description = "Flight Roster Management API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.120.4",
    "uvicorn>=0.38.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.20",
    "databases[sqlite]>=0.6.3",
    "pydantic[email]>=2.5.2",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==4.3.0",
    "python-multipart>=0.0.6",
    "upstash-redis>=1.5.0",
    "psycopg2-binary>=2.9.9",
    "pymongo[srv]>=4.6.0",
]